<resources>
    <string name="errcode_remark">
        1.  X：关人故障，只要是接到客户的关人召修并确认发生救援脱困行为，不管被困人员是否由客户自行放出，还是由维修人员放出，都需在SMS中的故障代码中标注X类故障。但若是客户误报，实际没有发生维修行为的则由组长在SMS中取消Cancel该记录。若已经发生维修行为，但实际上是到达正常或停梯故障，则在SMS中标注其它分类故障代码。
        \n2.  A：停梯故障，由于安全回路、门锁回路的线路及设备动作或损坏引起的回路断开所造成的停梯故障。其中，电梯的安全回路：限速器（开关）、相位继电器、热保护继电器（开关）、安全触点、极限开关、急停开关（包括轿顶、轿厢和底坑）、安全钳（开关）、安全窗开关、涨紧轮（开关)、缓冲器开关（包括轿厢和对重缓冲器）及其线路。门锁回路：厅门主门锁、被动门锁和轿门门锁及其线路。扶梯安全回路：急停开关、扶手带出入口开关、梳齿板开关、围裙板开关、梯级断裂开关、梯级防塌陷开关、驱动链断裂开关、扶手带断裂开关、过流保护继电器、热保护继电器、相位继电器、超速开关及其线路。
        \n3.  B：重要故障，电扶梯重要部件的损坏、失效或保护引起的故障，见次部件代码说明。  （如用户原因选D)
        \n4.  C：次要故障，电扶梯的次要部件的损坏或失效引起的故障。一般不影响运行，如按钮、照明等故障。见次部件代码说明。
        \n5.  D：用户原因或到达正常，由于用户方设备损坏、失效或用户误操作引起的故障和到达用户单位电扶梯已经恢复正常的情况，如用户单位停电、用户误拨开关等都为D类故障。
        \n6.  对于扶梯，若是由于上下机房内的部件（控制柜、主机(电机、制动器、变速器))损坏等引起的故障，在SMS中，部件区域代码应选1，而不是4。
        \n7.  电梯的限速器及安全钳部分，在SMS中，部件区域代码应选6，而不是1。
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_back">Back</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_done">Done</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_google_shopper">Shopper</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google Books</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="app_name">维保助手</string>
    <string name="user_name">用户名</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="tenant">租户</string>
    <string name="check_version">校验版本中</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请输入确认密码</string>
    <string name="today">今日</string>
    <string name="week">本周</string>
    <string name="unfinished">延迟</string>
    <string name="signed">待签字</string>
    <string name="finished">完成</string>
    <string name="mt_status_finish">完成</string>
    <string name="mt_status_wait">待保养</string>
    <string name="mt_status_in">保养中</string>
    <string name="mt_status_pause">暂停中</string>
    <string name="mt_status_sign">待签字</string>
    <string name="call_status_order">接单</string>
    <string name="call_status_start">开始工作</string>
    <string name="call_status_deal">处理中</string>
    <string name="call_status_sign">待签字</string>
    <string name="call_status_finish">完成</string>
    <string name="call_status_pause">暂停</string>
    <string name="trap">困人</string>
    <string name="not_trap">未困人</string>
    <string name="lift">直梯</string>
    <string name="esc">扶梯</string>
    <string name="project_name">项目名称</string>
    <string name="jha_area_1">机房</string>
    <string name="jha_area_2">轿顶/井道</string>
    <string name="jha_area_3">底坑</string>
    <string name="jha_desc_1">其它FPA项目描述</string>
    <string name="jha_desc_2">其它控制方法描述</string>
    <string name="stop_elevator">停梯</string>
    <string name="about_version">关于版本</string>
    <string name="modify_password">修改密码</string>
    <string name="cancellation">注销</string>
    <string name="not_involve">未涉及</string>
    <string name="explain">解释说明</string>
    <string name="no_item_desc">NO项或观察项详细描述</string>
    <string name="receive_address">接收地址</string>
    <string name="receive_person">接收人</string>
    <string name="receive_phone">接收电话</string>
    <string name="expecting_arrival_date">期望到货\n日期</string>
    <string name="auto_login">自动登录</string>
    <string name="selected">&#xe645;</string>
    <string name="current">当前</string>
</resources>