<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/top_title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/c_background"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title1_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/solid_bule_border_left"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/today"/>
        <TextView
            android:id="@+id/title2_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/solid_white_border_center"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/week"/>

        <TextView
            android:id="@+id/title3_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/solid_white_border_center"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/unfinished"/>

        <TextView
            android:id="@+id/title4_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/solid_white_border_right"
            android:textColor="@color/grey"
            android:layout_marginBottom="10dp"
            android:text="@string/finished"/>




    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>