<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"/>

    <LinearLayout
        android:id="@+id/setting_version_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:text="@string/user_name"/>
        <TextView
            android:id="@+id/username_textview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:textColor="@color/grey"
            android:text=""/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"
        android:layout_marginLeft="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"
        android:layout_marginLeft="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/confirm_password"/>
        <EditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@null"
            android:textSize="14sp"
            android:hint="@string/hint_confirm_password"
           />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"/>

</LinearLayout>