<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"/>

    <RelativeLayout
        android:id="@+id/setting_version_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/setting_version_textview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/about_version"/>

        <TextView
            android:id="@+id/version_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textSize="14sp"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"
        android:layout_marginLeft="15dp"/>

    <RelativeLayout
        android:id="@+id/auto_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"

            android:textSize="14sp"
            android:text="@string/auto_login"/>

        <com.zxtech.mt.widget.FontTextView
            android:id="@+id/auto_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:text="@string/selected"
            android:textSize="18dp"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:id="@+id/setting_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/setting_password_textview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/modify_password"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:id="@+id/setting_exit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/setting_exit_textview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/cancellation"/>

        </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc"/>


</LinearLayout>