<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/project_name"
        />

    <TextView
        android:id="@+id/project_textviewt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textColor="@color/grey"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/receive_address"
            />

        <TextView
            android:id="@+id/address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/receive_person"
            />

        <EditText
            android:id="@+id/caller_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/receive_phone"
            />

        <EditText
            android:id="@+id/phone_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="@color/grey"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/expecting_arrival_date"
            />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/grey"
            />
    </LinearLayout>


</LinearLayout>