<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/top_title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/c_background"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/title1_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/solid_bule_border_left"
            android:gravity="center"
            android:text="@string/current"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/title2_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/solid_white_border_center"
            android:gravity="center"
            android:text="@string/stop_elevator"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/title3_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/solid_white_border_center"
            android:gravity="center"
            android:text="@string/finished"
            android:textColor="@color/grey" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>